--- a/LadyBird_Foundation/app/src/main/res/layout/activity_admin_location.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_admin_location.xml
@@ -6,28 +6,32 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="20dp">
+        android:layout_width="336dp"
+        android:layout_height="500dp"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="375dp"
-            android:layout_height="700dp"
-            android:layout_gravity="center">
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:padding="16dp">
 
-            <EditText
-                android:id="@+id/aLocation_address"
+            <Button
+                android:id="@+id/alocation_saveBtn"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:ems="10"
-                android:hint="Physical Address"
-                android:inputType="text"
+                android:backgroundTint="#932020"
+                android:text="Save"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.493"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.516" />
+                app:layout_constraintVertical_bias="0.871" />
 
             <EditText
                 android:id="@+id/aLocation_addressName"
@@ -38,23 +42,35 @@
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.493"
+                app:layout_constraintHorizontal_bias="0.444"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.426" />
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/alocation_saveBtn"
+            <EditText
+                android:id="@+id/aLocation_address"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:backgroundTint="#932020"
-                android:text="Save"
+                android:ems="10"
+                android:hint="Physical Address"
+                android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.493"
+                app:layout_constraintHorizontal_bias="0.444"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.618" />
+                app:layout_constraintVertical_bias="0.644" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="303dp"
+                android:layout_height="176dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.424"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.049"
+                app:srcCompat="@drawable/location1" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
