--- a/LadyBird_Foundation/app/src/main/res/layout/activity_adminaboutus.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_adminaboutus.xml
@@ -1,62 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".adminaboutus"
-    android:background="@drawable/home">
+    android:gravity="center"
+    android:padding="16dp">
 
-
-    <EditText
-        android:id="@+id/admin_aboutus_mission"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="55dp"
-        android:ems="10"
-        android:hint="Our Mission"
-        android:inputType="text"
-        android:gravity="bottom"
+    <androidx.cardview.widget.CardView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="16dp"
+        android:padding="16dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="6dp"
+        app:layout_constraintWidth_percent="0.9"
+        app:layout_constraintHeight_percent="0.8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.551" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/admin_aboutused"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginBottom="29dp"
-        android:ems="10"
-        android:gravity="bottom"
-        android:hint="About Us"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.159" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
 
-    <Button
-        android:id="@+id/admin_aboutus_updatebtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="127dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="128dp"
-        android:backgroundTint="#932020"
-        android:text="Update About Us"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/admin_aboutus_mission"
-        app:layout_constraintVertical_bias="0.283" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+            <EditText
+                android:id="@+id/admin_aboutus_mission"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:layout_marginStart="56dp"
+                android:layout_marginTop="29dp"
+                android:layout_marginEnd="55dp"
+                android:ems="10"
+                android:gravity="bottom"
+                android:hint="Our Mission"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.514"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.71" />
+
+            <EditText
+                android:id="@+id/admin_aboutused"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:layout_marginStart="55dp"
+                android:layout_marginEnd="56dp"
+                android:layout_marginBottom="29dp"
+                android:ems="10"
+                android:gravity="bottom"
+                android:hint="About Us"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.127" />
+
+            <Button
+                android:id="@+id/admin_aboutus_updatebtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="127dp"
+                android:layout_marginTop="38dp"
+                android:layout_marginEnd="128dp"
+                android:backgroundTint="#932020"
+                android:text="Update About Us"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.642"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/admin_aboutus_mission"
+                app:layout_constraintVertical_bias="0.0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
