--- a/LadyBird_Foundation/app/src/main/res/layout/activity_main.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/activity_main.xml
@@ -67,12 +67,14 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="https://popia.co.za/"
-        android:textColor="@color/black"
         android:autoLink="web"
         android:linksClickable="true"
-        tools:layout_editor_absoluteX="144dp"
-        tools:layout_editor_absoluteY="702dp" />
+        android:text="https://popia.co.za/"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_LBgif" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
