--- a/LadyBird_Foundation/app/src/main/res/layout/admin_add_event.xml
+++ b/LadyBird_Foundation/app/src/main/res/layout/admin_add_event.xml
@@ -3,102 +3,107 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_gravity="center"
-    android:gravity="center">
+    android:gravity="center"
+    android:padding="16dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="20dp">
+        android:layout_width="356dp"
+        android:layout_height="635dp"
+        android:layout_margin="16dp"
+        android:padding="16dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.9">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="375dp"
-            android:layout_height="700dp"
-            android:layout_gravity="center">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
 
+            <!-- Event Image -->
             <ImageView
                 android:id="@+id/admin_imageView"
-                android:layout_width="134dp"
-                android:layout_height="131dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="24dp"
+                android:contentDescription="Event Image"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.21"
                 app:srcCompat="@drawable/baseline_event_24" />
 
+            <!-- Upload Image Button -->
             <Button
                 android:id="@+id/admin_add_events_uploadIV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
                 android:backgroundTint="#932020"
                 android:text="Upload Image"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/admin_imageView"
-                app:layout_constraintVertical_bias="0.049" />
+                app:layout_constraintTop_toBottomOf="@id/admin_imageView" />
 
+            <!-- Event Name Input -->
             <EditText
                 android:id="@+id/admin_add_events_eventname"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:ems="10"
+                android:layout_marginTop="16dp"
                 android:hint="Event Name"
                 android:inputType="text"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/admin_add_events_uploadIV"
-                app:layout_constraintVertical_bias="0.057" />
+                app:layout_constraintTop_toBottomOf="@id/admin_add_events_uploadIV"
+                app:layout_constraintWidth_percent="0.8" />
 
-
+            <!-- Event Date Input -->
             <EditText
                 android:id="@+id/admin_add_event_eventdate"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:ems="10"
+                android:layout_marginTop="16dp"
                 android:hint="Date"
                 android:inputType="date"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/admin_add_events_eventname"
-                app:layout_constraintVertical_bias="0.281" />
+                app:layout_constraintTop_toBottomOf="@id/admin_add_events_eventname"
+                app:layout_constraintWidth_percent="0.8" />
 
+            <!-- Event Description Input -->
             <EditText
                 android:id="@+id/admin_add_events_eventdescription"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:ems="10"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="16dp"
+                android:gravity="top|start"
                 android:hint="Description"
-                android:inputType="text"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:inputType="textMultiLine"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/admin_add_events_eventname"
-                app:layout_constraintVertical_bias="0.06" />
+                app:layout_constraintTop_toBottomOf="@id/admin_add_event_eventdate"
+                app:layout_constraintWidth_percent="0.8" />
 
+            <!-- Add Event Button -->
             <Button
                 android:id="@+id/admin_add_events_save"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
                 android:backgroundTint="#932020"
                 android:text="Add Event"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/admin_add_event_eventdate"
-                app:layout_constraintVertical_bias="0.134" />
+                app:layout_constraintTop_toBottomOf="@id/admin_add_events_eventdescription"
+                app:layout_constraintWidth_percent="0.8" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
